--- a/README.Rmd
+++ b/README.Rmd
@@ -6,6 +6,15 @@ output: github_document
 
 # rush
 
+Package website: [release](https://rush.mlr-org.com/) | [dev](https://rush.mlr-org.com/dev/)
+
+<!-- badges: start -->
+[![r-cmd-check](https://github.com/mlr-org/rush/actions/workflows/r-cmd-check.yml/badge.svg)](https://github.com/mlr-org/rush/actions/workflows/r-cmd-check.yml)
+[![CRAN Status](https://www.r-pkg.org/badges/version-ago/rush)](https://cran.r-project.org/package=rush)
+[![StackOverflow](https://img.shields.io/badge/stackoverflow-mlr3-orange.svg)](https://stackoverflow.com/questions/tagged/mlr3)
+[![Mattermost](https://img.shields.io/badge/chat-mattermost-orange.svg)](https://lmmisld-lmu-stats-slds.srv.mwn.de/mlr_invite/)
+<!-- badges: end -->
+
 *rush* is a package designed for decentralized and distributed computing in R.
 It enables workers to communicate over a shared [`Redis`](https://redis.io/) database to solve large-scale problems in parallel.
 The package powers the asynchronous optimization algorithms in the [`bbotk`](https://CRAN.R-project.org/package=bbotk) and [`mlr3tuning`](https://CRAN.R-project.org/package=paradox) packages.
@@ -26,10 +35,16 @@ The package powers the asynchronous optimization algorithms in the [`bbotk`](htt
 
 ## Install
 
+Install the latest release from CRAN.
+
+```{r eval = FALSE}
+install.packages("rush")
+```
+
 Install the development version from GitHub.
 
 ```{r eval = FALSE}
-remotes::install_github("mlr-org/rush")
+pak::pak("mlr-org/rush")
 ```
 
 And install [Redis](https://redis.io/docs/latest/operate/oss_and_stack/install/install-stack/).
@@ -40,3 +55,9 @@ And install [Redis](https://redis.io/docs/latest/operate/oss_and_stack/install/i
 
 *Decentralized network with four workers.*
 
+# Related Work
+
+* The [rrq](https://github.com/mrc-ide/rrq) package is a task queue system for R using Redis.
+* The [future](https://CRAN.R-project.org/package=future) package provides a simple and uniform way of evaluating R expressions asynchronously across a range of backends.
+* [batchtools](https://CRAN.R-project.org/package=batchtools) is a package for the execution of long-running tasks on high-performance computing clusters.
+* The [mirai](https://CRAN.R-project.org/package=mirai) package evaluates an R expression asynchronously in a parallel process, locally or distributed over the network.
